# OSRC

paralelFishes/: CMakeLists.txt  main.cpp
projektcpp/: CMakeLists.txt  data.db  main.cpp  poznamkovnik
